Store query service